--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -4,24 +4,83 @@
     padding: 0;
 }
 
+
 body {
-    color: #1098ad;
+    /* color: #1098ad; */
     font-family: sans-serif;
     /* border-top: 10px solid #1098ad;
     border-left: 10px solid #1098ad; */
     border: 10px 20px solid #1098ad;
     border-radius: 10px;
+    position: relative;
 }
 
+.container {
+    width: 700px;
+    /* 让容器中的元素居中 */
+    /* margin-left: auto;
+    margin-right: auto;; */
+    margin: 0 auto;
+    /* position: relative; */
+}
+.main-header {
+    border-right-color: #fff;
+    /* height: 100px; */
+    margin-bottom: 20px;
+}
 h1 {
-    color: #b7b7b7;
+    color: rgba(16, 152, 173,0.5);
 }
 
+h1::first-letter {
+    font-size: 50px;
+    font-style: normal;
+}
+
+h2::first-letter {
+    font-style: italic;
+}
+
+h2::after {
+    content: "TOP";
+    color: black;
+    background-color: yellow;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+    position: absolute;
+    top: 0;
+    right: 50px;
+}
+
+/* + 兄弟选择器， */
+h3 + p::first-line {
+    color: red;
+}
+
+nav {
+    text-align: center;
+}
+
+nav a:link {
+    /* background-color: orangered; */
+    display: inline-block;
+    font-size: 20px;
+    margin-right: 20px;
+}
+/* 伪类之后套伪类，消除右边距，以防不对称 */
+nav a:link:last-child {
+    margin-right: 0;
+}
 
 h2,h3,h4 {
-    color: red;
+    color: #1098ad; 
     margin-top: 40px;
     margin-bottom: 20px;
+    position: relative;
+    font-size: 30px;
+    /* background-color: orange; */
 }
 p {
     margin-bottom: 20px;
@@ -113,5 +172,17 @@ button:link {
 }
 
 button:hover {
-    background-color: #000;
+    background-color: blueviolet;
+}
+.like-button {
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+
+    position: absolute;
+
+    /* top: 900px; 这是页面的像素绝对位置，一般我们使用相对与父级元素的绝对位置 */
+    top: 2000px;
+    left: 700px;
+    /* 如果我们设置父级元素为relative，子级元素为absolute，那么子级元素就是相对于父级元素的绝对位置 */
 }
