--- a/starter/03-CSS-Fundamentals/converse/style.css
+++ b/starter/03-CSS-Fundamentals/converse/style.css
@@ -1,31 +1,117 @@
+* {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: sans-serif;
-    line-height: 1.5;
+    font-size: 15px;
 
+    /* line-height: 1.4; */
+
+}
+
+.container {
+    width: 825px;
+    /* background-color: red; */
 }
 
 .product {
     border: 5px solid  black;
+    margin-top:10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 835px;
 }
 
 .product-title {
+    padding: 10px;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.3em;
     text-transform: uppercase ;
+    background-color:#f7f7f7;
+    position: relative;
+}
+
+.product-title::before {
+    content: "SALE";
+    letter-spacing: 3px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(214,23,44);
+    color: white;
+    font-size: 10px;
+    padding: 5px 10px;
+    font-weight:bold;
+    position: absolute;
+    top: -10px;
+    left: -30px;
 }
 
 .price {
     font-size: 1.5em;
+    float: left;
 }
 
 .shipping {
+    height: inherit;
+    /* width: 1em; */
     font-size: 0.8em;
     font-weight: bold;
     text-transform: uppercase;
     color: #777;
+    float: right;
+    /* 此时产生坍缩 */
+    align-items: center;
+    margin-top: 5px;
+}
+
+.clearfix::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.square {
+    width:20px; 
+    height:20px;
+    /* background-color: red; */
+    display: inline-block;
+    margin-top: 25px;
+}
+
+.square:nth-child(1) {
+    background-color: black;
+    margin-right: 8px;
+}
+
+.square:nth-child(2) {
+    background-color: blue;
+    margin-right: 8px;
+}
+
+.square:nth-child(3) {
+    background-color: red;
+    margin-right: 8px;
+}
+
+.square:nth-child(4) {
+    background-color: grey;
+    margin-right: 8px;
+}
+
+.square:nth-child(5) {
+    background-color: green;
+    margin-right: 8px;
+}
+
+.square:nth-child(6) {
+    background-color: brown;
+    margin-right: 8px;
 }
 
 .more-info:link {
+    padding-top: 10px;
     color: black;
 }
 
@@ -40,13 +126,17 @@ body {
 
 .detail-title {
     font-weight: bold;
+    text-transform: uppercase;
+    font-size: 18px;
 }
 
 .detail-list li {
     list-style: square;
-
+    margin-left: 20px;
 }
 .button {
+    width: 100%;
+    height: 50px;
     background-color: black;
     border: none;
     color: white;
@@ -58,3 +148,47 @@ body {
 .button:hover {
     background-color: #fff;
 }
+
+.product-img {
+    /* background-color: red; */
+    float: left;
+    width: 250px;
+    height: 250px;
+    margin-right: 40px;
+}
+
+img {
+    height: 252px;
+    width: auto;
+}
+
+.product-selection {
+    /* background-color: yellow; */
+    float: left;
+    width: 242px;
+    margin-right: 40px;
+    /* padding: 10px; */
+}
+
+.price-now {
+    padding-top: 15px;
+    height: 40px;
+}
+
+.product-description {
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.product-details {
+
+    height: 250px;
+    /* background-color: green; */
+    float: left;
+    width: 242px;
+    padding:20px;
+    
+    /* margin-right: 40px; */
+}
+
