--- a/final/04-CSS-Layouts/style.css
+++ b/final/04-CSS-Layouts/style.css
@@ -377,10 +377,10 @@ aside {
 /* CSS GRID LAYOUT */
 .container {
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 3fr 1fr;
   column-gap: 75px;
   row-gap: 60px;
-  align-items: start;
+  align-items: start ;
 }
 
 .main-header {
@@ -392,6 +392,7 @@ article {
 }
 
 aside {
+
 }
 
 footer {
